--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Barberwolf</string>
+    <string name="new_game">New game</string>
+    <string name="exit">Exit</string>
+    <string name="settings">Settings</string>
 </resources>
