--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
     <string name="new_game">New game</string>
     <string name="exit">Exit</string>
     <string name="settings">Settings</string>
+    <string name="pause">Pause</string>
+    <string name="gamePause">Game Pause</string>
 </resources>
