--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,7 @@
     <string name="settings">Settings</string>
     <string name="pause">Pause</string>
     <string name="gamePause">Game Pause</string>
+    <string name="gameOver">Game Over</string>
+    <string name="defaultHealth">Health: 10000</string>
+    <string name="defaultScore">Score: 1000000</string>
 </resources>
