Add volume changing in settings

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,6 @@
     <string name="gameOver">Game Over</string>
     <string name="defaultHealth">Health: 10000</string>
     <string name="defaultScore">Score: 1000000</string>
+    <string name="volume">Volume: </string>
+    <string name="volume_key">volume</string>
 </resources>
